# tolvera

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  bibliography.bib  index.html  mkdocs.yml  objects.inv  pyproject.toml  references.bib
.github/: FUNDING.yml
artworks/: index.html
bibliography/: index.html
docs/: .pages  artworks.md  bibliography.md  examples.md  experiments.md  guide.md  index.md  publications.md
docs/stylesheets/: extra.css
docs/stylesheets/fonts/: Friedrich-Book.eot
examples/: index.html
examples/basics/: 01_particles.py
experiments/: index.html
guide/: index.html
publications/: index.html
reference/tolvera/__init__/: index.html
reference/tolvera/_iml/: index.html
reference/tolvera/_osc/: index.html
reference/tolvera/_state/: index.html
reference/tolvera/_taichi/: index.html
reference/tolvera/context/: index.html
reference/tolvera/cv/: index.html
reference/tolvera/dualsense/: index.html
reference/tolvera/iml/: index.html
reference/tolvera/mp/: index.html
reference/tolvera/mp/face/: index.html
reference/tolvera/mp/face_mesh/: index.html
reference/tolvera/mp/face_mesh_connections/: index.html
reference/tolvera/mp/hands/: index.html
reference/tolvera/mp/pose/: index.html
reference/tolvera/npndarray_dict/: index.html
reference/tolvera/osc/__init__/: index.html
reference/tolvera/particles/: index.html
reference/tolvera/patches/: index.html
reference/tolvera/pixels/: index.html
reference/tolvera/rec/: index.html
reference/tolvera/sketchbook/: index.html
reference/tolvera/species/: index.html
reference/tolvera/state/: index.html
reference/tolvera/taichi_/: index.html
reference/tolvera/tolvera_/: index.html
reference/tolvera/utils/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
src/tolvera/: __init__.py  __main__.py  _cv.py  _iml.py  _osc.py  _state.py  _taichi.py  context.py  cv.py  dualsense.py  iml.py  mp.py  npndarray_dict.py  osc.py  particles.py  patches.py  pixels.py  rec.py  sketchbook.py  species.py  state.py  taichi_.py  tolvera_.py  utils.py
src/tolvera/mp/: __init__.py  face.py  face_mesh.py  face_mesh_connections.py  hands.py  pose.py
src/tolvera/osc/: __init__.py  maxmsp.py  osc.py  oscmap.py  pd.py  update.py
src/tolvera/tests/: test_iml.py  test_npndarray.py  test_rules_setters.py  test_state.py  test_taichi_serialize.py
src/tolvera/vera/: __init__.py  attractor.py  flock.py  forces.py  gol.py  move.py  particle_life.py  reaction_diffusion.py  slime.py  swarmalators.py
stylesheets/: extra.css
(+27 files in other folders)
