[tool.poetry]
name = "tolvera"
version = "0.1.0"
description = "Tölvera is a library for exploring music interaction with artificial life and self-organising systems."
authors = ["Jack Armitage <jack.armitage@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
taichi = "^1.6.0"
iipyper = {path = "../iipyper", develop=true}
anguilla = {path = "../anguilla", develop=true}
jsons = "^1.6.3"
opencv-python = "^4.8.1.78"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocs-video = "^1.5.0"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-material = "^9.4.8"
mkdocs-material-extensions = "^1.3"
mkdocs-autorefs = "^0.5.0"
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.history
)/
'''
[tool.isort]
profile = "black"
