[tool.poetry]
name = "tolvera"
packages = [{ include = "tolvera", from = "src"}]
version = "0.1.0-rc2"
description = "Tölvera is a library for exploring music interaction with artificial life and self-organising systems."
authors = ["Jack Armitage <jack.armitage@me.com>"]
readme = "README.md"
license = "AGPL-3.0"
repository = "https://github.com/Intelligent-Instruments-Lab/tolvera"
documentation = "https://intelligent-instruments-lab.github.io/tolvera/"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
taichi = "^1.6.0"
jsons = "^1.6.3"
opencv-python = "^4.8.1.78"
torch = "^2.1.1"
iipyper = "^0.1.0b1"
anguilla-iml = "^0.1.0b4"
sardine = "^0.0.0b3"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocs-video = "^1.5.0"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-material = "^9.4.8"
mkdocs-material-extensions = "^1.3"
mkdocs-autorefs = "^0.5.0"
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.history
)/
'''

[tool.isort]
profile = "black"
